# distrito-view

./: .gitignore  .~lock.Alocações.xlsx#  Alocações.xlsx  Makefile  contratos.xlsx  dados..ods
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0125bdddb632_add_expected_start_date_to_proposal.py  07d398b92125_add_terminated_at_to_person.py  1de917db8492_add_company_to_person.py  2a59e13832d6_add_user_groups.py  2ee36a79e65e_add_weights_column_to_farol_criteria_.py  4144f953bed5_unify_pm_and_po_into_pm_po_role.py  48e0e947d460_add_proposal_stages_and_drop_fixed_.py  59f5979303c9_add_users.py  628ad9222ca4_initial_schema.py  68540500c02b_add_proposals.py  a8a40d0906a5_add_farol_tables.py  b1a2c3d4e5f6_farol_values_weekly.py  c2b3d4e5f6a7_farol_groups.py  d3c4e5f6a7b8_add_projects.py  d7add7f39766_add_dates_to_contract_role.py  e4d5f6a7b8c9_farol_values_project_scope.py
backend/app/: config.py  create_user.py  database.py  dependencies.py  main.py  permissions.py  seed.py  seed_new_contracts.py  seed_proposals.py
backend/app/models/: __init__.py  allocation.py  client.py  contract.py  contract_role.py  farol_criterion.py  farol_group.py  farol_value.py  person.py  person_role.py  project.py  proposal.py  proposal_stage.py  role.py  user.py  user_group.py  user_group_area.py  user_group_member.py
backend/app/routers/: allocations.py  auth.py  clients.py  contracts.py  dashboard.py  farol.py  people.py  projects.py  proposal_stages.py  proposals.py  roles.py  (+1 more)
backend/tests/: test_user_group_permissions.py
(+104 files in other folders)
