[project]
name = "distrito-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "email-validator>=2.3.0",
    "fastapi>=0.128.5",
    "odfpy>=1.4.1",
    "pandas>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
